# 1.0.0

* Remove deprecated convert_underline argument.

* The default ID prefix is now the empty string rather than a random number
  followed by a hyphen.

# 0.3.31

* Improve collapsing of similar non-fresh HTML elements.

# 0.3.30

* Allow bold and italic style mappings to be configured.

# 0.3.29

* Handle references to missing styles when reading documents.

# 0.3.28

* Improve support for lists made in LibreOffice. Specifically, this changes the
  default style mapping for paragraphs with a style of "Normal" to have the
  lowest precedence.

# 0.3.27

* Handle XML where the child nodes of an element contains text nodes.

# 0.3.26

* Always use mc:Fallback when reading mc:AlternateContent elements.

# 0.3.25

* Remove duplicate messages from results.

* Read v:imagedata with r:id attribute.

* Read children of v:roundrect.

* Ignore office-word:wrap, v:shadow and v:shapetype.

# 0.3.24

* Continue with warning if external images cannot be found.

* Add support for embedded style maps.

# 0.3.23

* Fix Python 3 support.

# 0.3.22

* Generate warnings for not-understood style mappings and continue, rather than
  stopping with an error.

* Support file objects without a name attribute again (broken since 0.3.20).

# 0.3.21

* Ignore w:numPr elements without w:numId or w:ilvl children.

# 0.3.20

* Add support for linked images.

# 0.3.19

* Fix: cannot extract raw text from elements without children

# 0.3.18

* Support links and images in footnotes and endnotes.

# 0.3.17

* Add support for underlines in style map.

* Add support for strikethrough.

# 0.3.16

* Add basic support for text boxes. The contents of the text box are treated as
  a separate paragraph that appears after the paragraph containing the text box.

# 0.3.15

* Support styles defined without a name

# 0.3.14

* Add ignore_empty_paragraphs option, which defaults to True.

# 0.3.13

* Always use forward slashes in ZIP paths. This should fix image handling on
  Windows.

# 0.3.12
