@@ -153,7 +153,7 @@ def footnotes_are_appended_to_text():
         '<li id="doc-42-footnote-2"><p> Fin. <a href="#doc-42-footnote-ref-2">↑</a></p></li></ol>')
     
     with open(test_path("footnotes.docx"), "rb") as fileobj:
-        result = mammoth.convert_to_html(fileobj=fileobj, id_prefix="doc-42")
+        result = mammoth.convert_to_html(fileobj=fileobj, id_prefix="doc-42-")
         assert_equal([], result.messages)
         assert_equal(expected_html, result.value)
 
@@ -167,7 +167,7 @@ def endnotes_are_appended_to_text():
         '<li id="doc-42-endnote-3"><p> Fin. <a href="#doc-42-endnote-ref-3">↑</a></p></li></ol>')
     
     with open(test_path("endnotes.docx"), "rb") as fileobj:
-        result = mammoth.convert_to_html(fileobj=fileobj, id_prefix="doc-42")
+        result = mammoth.convert_to_html(fileobj=fileobj, id_prefix="doc-42-")
         assert_equal([], result.messages)
         assert_equal(expected_html, result.value)
 
@@ -179,7 +179,7 @@ def relationships_are_handled_properly_in_footnotes():
         '<ol><li id="doc-42-footnote-1"><p> <a href="http://www.example.com">Example</a> <a href="#doc-42-footnote-ref-1">↑</a></p></li></ol>')
     
     with open(test_path("footnote-hyperlink.docx"), "rb") as fileobj:
-        result = mammoth.convert_to_html(fileobj=fileobj, id_prefix="doc-42")
+        result = mammoth.convert_to_html(fileobj=fileobj, id_prefix="doc-42-")
         assert_equal([], result.messages)
         assert_equal(expected_html, result.value)
 
