@@ -2,6 +2,8 @@
 
 * Remove deprecated convert_underline argument.
 
+* Generated IDs no longer insert a hyphen after the ID prefix.
+
 * The default ID prefix is now the empty string rather than a random number
   followed by a hyphen.
 
